Added portfolio link.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="cards" id="card16" onclick="cardClicked(this)"><img></div>
       </div>
     </div>
+  <div class="credit"><a href="http://www.studiosolance.com" target="_blank">www.studiosolance.com</a></div>  
   </body>
   <script src="js.js"></script>
 </html>
