added simple route redirect

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="time; URL=/" />
+<meta http-equiv="refresh" content="0; URL=/" />
+<a href="/">Routes are not working due to static deploy. Click here to return to application.</a>
